Updated `RuleName` model with `@NotBlank` validations, renamed `sql` to `sqlStr` in templates, and added CRUD methods in `RuleNameService`.